--- a/root/code/templates/liblogin.html
+++ b/root/code/templates/liblogin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>User Login form</title>
+    <title>Librarian Login form</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -9,8 +9,8 @@
 <body>
     <div id="main">
         <div id="form-body">
-            <h1>Login Form</h1>
-            <form action="/userdashboard" method="post">
+            <h1>Librarian Login</h1>
+            <form action="/library/home" method="post">
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username" placeholder="Shubham03" name="u_name" required>
@@ -22,7 +22,7 @@
                 <input type="submit" class="btn btn-primary" value="Login"> 
             </form>
             <div style="text-align: center;">
-                Are you a new user? <a href="./register">register.</a>
+                Don't have credientials? <a href="./register">register Library</a>
             </div>
         </div>
     </div>
