--- a/root/code/templates/registerlib.html
+++ b/root/code/templates/registerlib.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>User Register form</title>
+    <title>Librarian Register form</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -9,7 +9,7 @@
     <div id="main">
         <div id="canvas">
             <div id="form-body">
-                <h1>Register Form</h1>
+                <h1>Register Your Library</h1>
                 <form action="/register" method="post">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
@@ -23,7 +23,7 @@
                   <input type="submit" class="btn btn-primary" value="Register"> 
                  </form>
                  <div style="text-align: center;">
-                  Are you a new user? <a href="./login">login.</a>
+                  Already Registered Librarian <a href="./login">login.</a>
                 </div>
             </div>
         </div>
