--- a/root/code/templates/liblogin.html
+++ b/root/code/templates/liblogin.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="main">
+        <br> <br>
+        <h2 style="text-align: center; font-size:xx-large;" >Welcome, Back!</h2> <!-- Greeting heading for users -->
+        <h3 style="text-align: center; font-size: large;">Login with your credientials</h3>
         <div id="form-body">
             <h1>Librarian Login</h1>
             <form action="/library/home" method="post">
