--- a/root/code/templates/userbooks.html
+++ b/root/code/templates/userbooks.html
@@ -14,15 +14,15 @@
           <span class="fs-4">{{ user["username"] }}</span>
         </a>
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
-          <li class="nav-item"><a href="./user/books" class="nav-link">My Books</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Books</a></li>
+          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">My Books</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
           <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Logout</a></li>
         </ul>
       </header>
       <div class="text-center">
-        <h1>Lets discover books to read...</h1>
+        <h1>Your Current Books </h1>
       </div>
 
       <div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
@@ -49,7 +49,7 @@
       </div>
       <div style="margin: 50px;">
         <div style="text-align: left; margin-left: 50px;">
-          <h3>List of available books</h3>
+          <h3>Current Books</h3>
         </div>
         <div class="col-xs-8 col-xs-offset-2 well">
           <table class="table table-scroll table-striped">
@@ -146,91 +146,120 @@
                       <td>John</td>
                       <td>Madison</td>
                   </tr>
-                  <tr>
-                      <td>15</td>
-                      <td>Fredie</td>
-                      <td>Winters</td>
-                      <td>Washington</td>
-                  </tr>
-                  <tr>
-                    <td>10</td>
-                    <td>Colleen</td>
-                    <td>Hurst</td>
-                    <td>Randolph</td>
-                </tr>
-                <tr>
-                    <td>11</td>
-                    <td>Rhona</td>
-                    <td>Herrod</td>
-                    <td>Cumberland</td>
-                </tr>
-                <tr>
-                    <td>12</td>
-                    <td>Jane</td>
-                    <td>Paul</td>
-                    <td>Marshall</td>
-                </tr>
-                <tr>
-                    <td>13</td>
-                    <td>Ashton</td>
-                    <td>Fox</td>
-                    <td>Calhoun</td>
-                </tr>
-                <tr>
-                    <td>14</td>
-                    <td>Garrett</td>
-                    <td>John</td>
-                    <td>Madison</td>
-                </tr>
-                <tr>
-                    <td>15</td>
-                    <td>Fredie</td>
-                    <td>Winters</td>
-                    <td>Washington</td>
-                </tr>
-                <tr>
-                  <td>10</td>
-                  <td>Colleen</td>
-                  <td>Hurst</td>
-                  <td>Randolph</td>
-              </tr>
-              <tr>
-                  <td>11</td>
-                  <td>Rhona</td>
-                  <td>Herrod</td>
-                  <td>Cumberland</td>
-              </tr>
-              <tr>
-                  <td>12</td>
-                  <td>Jane</td>
-                  <td>Paul</td>
-                  <td>Marshall</td>
-              </tr>
-              <tr>
-                  <td>13</td>
-                  <td>Ashton</td>
-                  <td>Fox</td>
-                  <td>Calhoun</td>
-              </tr>
-              <tr>
-                  <td>14</td>
-                  <td>Garrett</td>
-                  <td>John</td>
-                  <td>Madison</td>
-              </tr>
-              <tr>
-                  <td>15</td>
-                  <td>Fredie</td>
-                  <td>Winters</td>
-                  <td>Washington</td>
-              </tr>
               </tbody>
           </table>
+
+
+
+
         </div>
+        
+        <div style="text-align: left; margin-left: 50px;">
+            <h3>Completed Books</h3>
+          </div>
+          <div class="col-xs-8 col-xs-offset-2 well">
+            <table class="table table-scroll table-striped">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>County</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Andrew</td>
+                        <td>Jackson</td>
+                        <td>Washington</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Thomas</td>
+                        <td>Marion</td>
+                        <td>Jackson</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Benjamin</td>
+                        <td>Warren</td>
+                        <td>Lincoln</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Grant</td>
+                        <td>Wayne</td>
+                        <td>Union</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>John</td>
+                        <td>Adams</td>
+                        <td>Marshall</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>Morgan</td>
+                        <td>Lee</td>
+                        <td>Lake</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>John</td>
+                        <td>Henry</td>
+                        <td>Brown</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>William</td>
+                        <td>Jacob</td>
+                        <td>Orange</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td>Kelly</td>
+                        <td>Davidson</td>
+                        <td>Taylor</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>Colleen</td>
+                        <td>Hurst</td>
+                        <td>Randolph</td>
+                    </tr>
+                    <tr>
+                        <td>11</td>
+                        <td>Rhona</td>
+                        <td>Herrod</td>
+                        <td>Cumberland</td>
+                    </tr>
+                    <tr>
+                        <td>12</td>
+                        <td>Jane</td>
+                        <td>Paul</td>
+                        <td>Marshall</td>
+                    </tr>
+                    <tr>
+                        <td>13</td>
+                        <td>Ashton</td>
+                        <td>Fox</td>
+                        <td>Calhoun</td>
+                    </tr>
+                    <tr>
+                        <td>14</td>
+                        <td>Garrett</td>
+                        <td>John</td>
+                        <td>Madison</td>
+                    </tr>
+                </tbody>
+            </table>
+  
+  
+  
+  
+          </div>
       </div>
-
-
-
     </div>
 </body>
 </html>
