--- a/root/code/templates/userbooks.html
+++ b/root/code/templates/userbooks.html
@@ -14,11 +14,10 @@
           <span class="fs-4">{{ user["username"] }}</span>
         </a>
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link">Books</a></li>
+            <li class="nav-item"><a href="/userdashboard" class="nav-link">Books</a></li>
           <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">My Books</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Logout</a></li>
+          <li class="nav-item"><a href="/login" class="nav-link">Logout</a></li>
         </ul>
       </header>
       <div class="text-center">
