--- a/root/code/templates/libdash.html
+++ b/root/code/templates/libdash.html
@@ -16,7 +16,7 @@
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Logout</a></li>
+            <li class="nav-item"><a href="/library/login" class="nav-link">Logout</a></li>
           </ul>
         </header>
   
