--- a/root/code/templates/userdash.html
+++ b/root/code/templates/userdash.html
@@ -17,8 +17,7 @@
           <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
           <li class="nav-item"><a href="./user/books" class="nav-link">My Books</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Logout</a></li>
+          <li class="nav-item"><a href="/login" class="nav-link">Logout</a></li>
         </ul>
       </header>
       <div class="text-center">
