--- a/root/code/templates/login.html
+++ b/root/code/templates/login.html
@@ -13,7 +13,7 @@
         <h3 style="text-align: center; font-size: large;">Login with your credientials</h3>
         <div id="form-body">
             <h1>Login Form</h1>
-            <form action="/userdashboard" method="post">
+            <form action="" method="post">
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username" placeholder="Shubham03" name="u_name" required>
@@ -31,3 +31,5 @@
     </div>
 </body>
 </html>
+
+
