--- a/root/code/templates/register.html
+++ b/root/code/templates/register.html
@@ -38,7 +38,7 @@
                     <input type="submit" class="btn btn-primary" value="Register"> 
                 </form>
                 <div style="text-align: center;">
-                    Are you an old user? <a href="./login">Login.</a>
+                    Are you an old user? <a href="{{url_for('/user/login')}}">Login.</a>
                 </div>
             </div>
             </div>
