--- a/root/code/templates/registerlib.html
+++ b/root/code/templates/registerlib.html
@@ -10,10 +10,14 @@
         <div id="canvas">
             <div id="form-body">
                 <h1>Register Your Library</h1>
-                <form action="/register" method="post">
+                <form action="" method="post">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
                         <input type="text" class="form-control" id="username" placeholder="user123" name="u_name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="libraryname" class="form-label">Library Name</label>
+                        <input type="text" class="form-control" id="libraryname" placeholder="ABC Library" name="libraryname" required>
                     </div>
                     <div class="mb-3">
                         <label for="pwd" class="form-label">Password</label>
