--- a/root/code/templates/userdash.html
+++ b/root/code/templates/userdash.html
@@ -11,13 +11,13 @@
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-          <span class="fs-4">{{ user["username"] }}</span>
+          <span class="fs-4">{{ user["firstname"] }}</span>
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
           <li class="nav-item"><a href="./user/books" class="nav-link">My Books</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-          <li class="nav-item"><a href="/login" class="nav-link">Logout</a></li>
+          <li class="nav-item"><a href="{{url_for('/user/Logout')}}" class="nav-link">Logout</a></li>
         </ul>
       </header>
       <div class="text-center">
